<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Onboard2">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/some_id"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_id0"
            android:textColor="@color/blue"
            android:textAppearance="@style/some_id" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="105dp"
            app:srcCompat="@drawable/shape" />
    </LinearLayout>



    <TextView
        android:id="@+id/some_id2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="top"
        android:text="@string/some_id3"
        android:textAppearance="@style/some_id"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/some_id1"
        android:layout_width="336dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:gravity="center_horizontal|top"
        android:text="@string/some_id4"
        android:textAppearance="@style/some_id1"
        android:translationY="-1.65sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        app:srcCompat="@drawable/group_2__1_" />

<LinearLayout
    android:layout_width="400dp"
    android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/__2022_09_17__19_21_1" />
</LinearLayout>



