<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Onboard3">
    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/some_id7"
            android:textAppearance="@style/some_id"
            android:textColor="@color/blue" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="105dp"
            app:srcCompat="@drawable/shape" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/some_id2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="top"
            android:text="@string/some_id5"
            android:textAppearance="@style/some_id"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" />


        <TextView
            android:id="@+id/some_id1"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|top"
            android:text="@string/some_id6"
            android:textAppearance="@style/some_id1"
            android:translationY="-1.65sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/group_2__2_" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/_30_1" />

</LinearLayout>


